--- a/index.html
+++ b/index.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 
 </head>
+
 <body>
+    <!-- Header section start -->
     <header class="header-container">
+        <!-- Navigation section  strat -->
+        <nav class="nav-container">
+            <div class="site-logo">
+                <img src="images/icon.png" alt="">
+                <h3 class="section-title">Gamer</h3>
+            </div>
+            <ul class="nav-items">
+                <li>About Us</li>
+                <li>Developers</li>
+                <li>Follow Us On</li>
+            </ul>
+
+        </nav>
+        <!-- Navigation section end -->
+
+        <!-- Banner section start -->
+        <div class="banner-container">
+            <div class="banner-content">
+
+            </div>
+            <div class="banner-img">
+                
+            </div>
+        </div>
 
     </header>
+    <!-- header section end -->
 
+    <!-- main section start -->
     <main class="main-container">
+        <section>
+
+        </section>
 
 
     </main>
+    <!-- main section end -->
     <footer class="footer-container">
 
     </footer>
-    
+
 </body>
+
 </html>
