--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav-container">
             <div class="site-logo">
                 <img src="images/icon.png" alt="">
-                <h3 class="section-title">Gamer</h3>
+                <h3 class="nav-title">Gamer</h3>
             </div>
             <ul class="nav-items">
                 <li>About Us</li>
@@ -31,10 +31,14 @@
         <!-- Banner section start -->
         <div class="banner-container">
             <div class="banner-content">
+                <h3 class="banner-title">Play Like The</h3>
+                <h2 class="banner-title-special">G.O.A.T.</h2>
+                <p class="banner-desc">1-Click instant play <br>No Download <br>1000s of supported online games</p>
 
             </div>
             <div class="banner-img">
-                
+                <img src="images/Group 18.png" alt="">
+
             </div>
         </div>
 
