added play section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Gamer</title>
     <link rel="stylesheet" href="style/index.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -34,12 +35,18 @@
                 <h3 class="banner-title">Play Like The</h3>
                 <h2 class="banner-title-special">G.O.A.T.</h2>
                 <p class="banner-desc">1-Click instant play <br>No Download <br>1000s of supported online games</p>
+                <div class="banner-btn">
+                    <button class="signing-btn">Sign In</button>
+                    <button class="go-rougue-btn">Go Rogue</button>
+                </div>
 
             </div>
+
             <div class="banner-img">
                 <img src="images/Group 18.png" alt="">
-
             </div>
+
+
         </div>
 
     </header>
@@ -47,9 +54,58 @@
 
     <!-- main section start -->
     <main class="main-container">
-        <section>
+        <!-- games section start -->
+        <section class="games-container">
+            <div class="games-content">
+                <h3 class="section-title">Online Games <span class="title-special-color">Funny Videos</span></h3>
+                <p class="section-desc">A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+
+            <div class="games-items-container">
+                <div class="games-item">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p class="games-img-desc">No Download. No Installs. Play games Instantly.</p>
+                </div>
+                <div class="games-item">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p class="games-img-desc">Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="games-item">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p class="games-img-desc">Breaking game records like OG</p>
+                </div>
+                <div class="games-item">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p class="games-img-desc">Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+
+            </div>
+
 
         </section>
+        <!-- games section end -->
+
+        <!-- Play Section start -->
+        <section class="play-container">
+            <div class="play content">
+                <h3 class="section-title"> <span class="section-title-color">Play Instantly,</span><br> No Downloads <br> No Installs.</h3>
+                <p class="play-section-desc">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-img-container">
+                <img class="play-img" src="images/Rectangle 55.png" alt="">
+                <img class="img-over-img" src="images/Rectangle 66.png" alt="">
+            </div>
+
+        </section>
+        <!-- play section End -->
+
+        <!-- Games category -->
+        <section class="games-catagory-container">
+            
+
+        </section>
+
 
 
     </main>
