--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 
                 <div class="nav-social-btn">
-                    <span class="nav-social-word">Follow Us On:</span>
+                    <span class="nav-social-word">Follow Us On</span>
                     <button>
                         <i class="fa-brands fa-youtube fa-xl" style="color: #ff0000;"></i>
                     </button>
                     <button><i class="fa-brands fa-tiktok fa-xl" style="color: #2f466f; "></i></button>
-                    
+
                 </div>
             </ul>
 
@@ -68,28 +68,60 @@
         <!-- games section start -->
         <section class="games-container">
             <div class="games-content">
+
                 <h3 class="section-title">Online Games <span class="title-special-color">Funny Videos</span></h3>
                 <p class="section-desc">A Collection of Hilarious Videos to Brighten Your Day</p>
             </div>
 
 
-            <div class="games-items-container">
+
+            <div class="game-item-container">
                 <div class="games-item">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <p class="games-img-desc">No Download. No Installs. Play games Instantly.</p>
+                    <a href="">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <div class="hover-img">
+                            <img src="images/play.png" alt="">
+                            <p class="hover-text">Play Now</p>
+
+                        </div>
+                    </a>
+                    <p class="games-img-desc">No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="games-item">
-                    <img src="images/Rectangle 5.png" alt="">
+                    <a href="">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <div class="hover-img">
+                            <img src="images/play.png" alt="">
+                            <p class="hover-text">Play Now</p>
+
+                        </div>
+                    </a>
                     <p class="games-img-desc">Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="games-item">
-                    <img src="images/Rectangle 6.png" alt="">
-                    <p class="games-img-desc">Breaking game records like OG</p>
+                    <a href="">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <div class="hover-img">
+                            <img src="images/play.png" alt="">
+                            <p class="hover-text">Play Now</p>
+
+                        </div>
+                    </a>
+                    <p class="games-img-desc">Breaking the game records like OG</p>
                 </div>
                 <div class="games-item">
-                    <img src="images/Rectangle 7.png" alt="">
+                    <a href="">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <div class="hover-img">
+                            <img src="images/play.png" alt="">
+                            <p class="hover-text">Play Now</p>
+                        </div>
+                    </a>
                     <p class="games-img-desc">Busted gaming on school laptop, but you are still lit.</p>
                 </div>
+            </div>
+
+
 
             </div>
 
@@ -101,7 +133,8 @@
         <section class="play-container">
             <div class="play content">
                 <h3 class="section-title"> <span class="section-title-color">Play Instantly,</span><br> No Downloads
-                    <br> No Installs.</h3>
+                    <br> No Installs.
+                </h3>
                 <p class="play-section-desc">Play games online for free without downloading. Just click the Play button
                     and play instantly in your browser.</p>
             </div>
