banner list icon added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
             <div class="banner-content">
                 <h3 class="banner-title">Play Like The</h3>
                 <h2 class="banner-title-special">G.O.A.T.</h2>
-                <p class="banner-desc">1-Click instant play <br>No Download <br>1000s of supported online games</p>
+                <p class="banner-desc">
+                <ul class="banner-list">
+                    <li> <img src="images/banner-icon1.png" alt="">
+                        1-Click instant play</li>
+                    <li> <img src="images/banner-icon2.png" alt="">
+                        No Download</li>
+                    <li> <img src="images/banner-icon3.png" alt="">
+                        1000s of supported online games</li>
+
+                </ul>
+
+                </p>
                 <div class="banner-btn">
                     <button class="signing-btn">Sign In</button>
                     <button class="go-rougue-btn">Go Rogue</button>
